--- a/mystyle.css
+++ b/mystyle.css
@@ -20,30 +20,36 @@ header{
   text-align: justtify;
 }
 
-nav { /*checked*/
+nav {
   padding-top: 0px;
+  text-align: center;
   margin: auto;
   display: block;
-  display: inline;
-  text-align: center;
   height: 50px;
-  width: 700px;
+  width: 730px;
+}
+
+nav ul{
   font-family: glass antiqua;
-  list-style-type: none;
-  float: left;
-  font-size: 18px;
-  color: #7C1137;
-}
-
-nav ul{ /*checked*/
-  margin: auto; 
-}
-
-nav ul li { /*checked*/
   display: inline;
-  line-height: 40px;
+  display: block;
+  text-align: center;
   float: left;
+  margin: auto;
+  list-style-type: none;
+}
+
+nav ul li {
+  display: inline;
+  display: block;
+  line-height: 40px;
+  float: right;
+  float: left;
+  text-align: center;
+  margin: auto;
   width: 130px;
+  color: #7C1137; 
+  font-size: 18px;
 }
 
 nav a:link {
