--- a/mystyle.css
+++ b/mystyle.css
@@ -111,7 +111,7 @@ section a:visited {
 }  /* visited link */
 
 .item {
-  padding: 10px;
+  /*padding: 10px;*/
   right-padding: 40px;
   clear: both;
   float: left;
@@ -120,9 +120,9 @@ section a:visited {
 .explanation{
   font-family: glass antiqua, josefin slab, serif;
   float: center;
-  margin: 55px;
+  /*margin: 55px;
   top-padding: 15px;
-  bottom-padding: 15px;
+  bottom-padding: 15px;*/
   text-align: justify;
   width: 200px;
   height: 200 px;
