--- a/mystyle.css
+++ b/mystyle.css
@@ -17,7 +17,7 @@ header{
   height:140px; 
   width: 695px;
   margin: auto;
-  text-align: justtify;
+  text-align: justify;
 }
 
 nav {
@@ -70,9 +70,7 @@ section{
   clear:both;
   font-family: glass antiqua, josefin slab, serif;
   text-align: justify;
-  display: inline;
   display: block;
-  float: middle;
   margin: auto;
   width: 560px;
 }
@@ -80,14 +78,13 @@ section{
 section ul{
   font-family: glass antiqua;
   list-style-type: none;
-  width:700px;
   text-align:center;
   height: 200px;
 }
 
 section ul li {
-  diplay: inline;
   line-height: 40px;
+  display:block;
   float: left;
   width:130px;
   font-size: 18px;
@@ -112,21 +109,22 @@ section a:visited {
 }  /* visited link */
 
 .item {
-  /*padding: 10px;*/
   right-padding: 40px;
-  clear: both;
+  display: block;
   float: left;
+  width:200px;
 }
 
 .explanation{
   font-family: glass antiqua, josefin slab, serif;
-  float: center;
   /*margin: 55px;
   top-padding: 15px;
   bottom-padding: 15px;*/
   text-align: justify;
-  width: 200px;
-  height: 200 px;
+  width: 340px;
+  height: 200px;
+  display: block;
+  float: right;
 }
 
 footer{
