--- a/mystyle.css
+++ b/mystyle.css
@@ -112,7 +112,7 @@ section a:visited {
 }  /* visited link */
 
 .item {
-  /*padding: 10px;*/
+  padding: 10px;
   right-padding: 40px;
   clear: both;
   float: left;
